@@ -6,8 +6,12 @@ import com.cineverse.cineverse.domain.enums.ContentType;
 import com.cineverse.cineverse.dto.ContentMetaDataDto;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
+import jakarta.persistence.TypedQuery;
 import jakarta.persistence.criteria.*;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Repository;
 
 import java.util.*;
@@ -21,121 +25,175 @@ public class ContentRepositoryImpl implements ContentRepositoryCustom {
     private TMDBApiConfiguration tmdbApiConfiguration;
 
     @Override
-    public List<ContentMetaDataDto> filterContent(List<String> genres, Integer year, Integer rate, ContentType contentType, String language, String sortBy) {
+    public Page<Content> filterContent(List<String> genres, Integer year, Integer rate, ContentType contentType,
+                                       String language, String sortBy, Pageable pageable) {
+
         CriteriaBuilder criteriaBuilder = entityManager.getCriteriaBuilder();
+
         Class<? extends Content> entityClass = Content.class;
-        if (contentType == ContentType.MOVIE) entityClass = Movie.class;
-        else if (contentType == ContentType.SERIES) entityClass = Series.class;
-        CriteriaQuery<Content> query = criteriaBuilder.createQuery(Content.class);
-        Root<? extends Content> root = query.from(entityClass);
-        root.fetch("genres", JoinType.LEFT).fetch("genre", JoinType.LEFT);
-        query.distinct(true);
-        List<Predicate> predicates = new ArrayList<>();
-        if (contentType != null) {
-            if (contentType.equals(ContentType.MOVIE)) {
-                predicates.add(root.get("contentType").in(ContentType.MOVIE));
-            } else predicates.add(root.get("contentType").in(ContentType.SERIES));
+        if (contentType == ContentType.MOVIE) {
+            entityClass = Movie.class;
+        } else if (contentType == ContentType.SERIES) {
+            entityClass = Series.class;
         }
-        if (contentType == null) {
-            predicates.add(root.get("contentType").in(ContentType.SERIES, ContentType.MOVIE));
-        }
-        if (genres != null && !genres.isEmpty()) {
-            Subquery<Integer> subquery = query.subquery(Integer.class);
-            Root<ContentGenre> subRoot = subquery.from(ContentGenre.class);
-            Join<ContentGenre, Genre> subGenreJoin = subRoot.join("genre");
-            subquery.select(subRoot.get("content").get("id"))
-                    .where(subGenreJoin.get("name").in(genres))
-                    .groupBy(subRoot.get("content").get("id"))
-                    .having(criteriaBuilder.equal(criteriaBuilder.countDistinct(subGenreJoin.get("name")), genres.size()));
-            predicates.add(root.get("id").in(subquery));
-        }
-        if (language != null && !language.isBlank()) {
-            predicates.add(criteriaBuilder.like(criteriaBuilder.lower(root.get("language")), "%" + language.toLowerCase() + "%"));
-        }
-        if (rate != null && rate > 0) {
-            predicates.add(criteriaBuilder.greaterThanOrEqualTo(root.get("imdbRate"), rate));
-        }
-        if (year != null) {
-            Expression<Integer> releaseYear = criteriaBuilder.function("year", Integer.class, root.get("releaseDate"));
-            predicates.add(criteriaBuilder.greaterThanOrEqualTo(releaseYear, year));
-            query.orderBy(criteriaBuilder.asc(releaseYear));
-        }
+
+        CriteriaQuery<Integer> idQuery = criteriaBuilder.createQuery(Integer.class);
+        Root<? extends Content> idRoot = idQuery.from(entityClass);
+        idQuery.select(idRoot.get("id")).distinct(true);
+
+        List<Predicate> idPredicates = buildPredicates(criteriaBuilder, idRoot, idQuery, genres, year, rate,
+                contentType, language);
+
         if (sortBy != null && !sortBy.isBlank()) {
-            if (sortBy.equals("mostRecent"))
-                query.orderBy(criteriaBuilder.desc(root.get("releaseDate")));
-            else if (sortBy.equals("topRated")) query.orderBy(criteriaBuilder.desc(root.get("imdbRate")));
+            if (sortBy.equals("mostRecent")) {
+                idQuery.orderBy(criteriaBuilder.desc(idRoot.get("releaseDate")));
+            } else if (sortBy.equals("topRated")) {
+                idQuery.orderBy(criteriaBuilder.desc(idRoot.get("imdbRate")));
+            } else {
+                idQuery.orderBy(criteriaBuilder.asc(idRoot.get("releaseDate"))); // default
+            }
         }
-        query.where(criteriaBuilder.and(predicates.toArray(new Predicate[0])));
-        List<? extends Content> results = entityManager.createQuery(query).getResultList();
-        return results.stream()
-                .map(content -> {
-                    String slug = null;
-                    if (content instanceof Movie movie) {
-                        slug = movie.getSlug();
-                    } else if (content instanceof Series series) {
-                        slug = series.getSlug();
-                    }
-                    return new ContentMetaDataDto(
-                            content.getId(),
-                            content.getTitle(),
-                            slug,
-                            tmdbApiConfiguration.getBaseImageUrl() + content.getPosterPath(),
-                            content.getReleaseDate(),
-                            content.getImdbRate(),
-                            content.getOverview(),
-                            content.getGenres().stream()
-                                    .map(g -> g.getGenre().getName())
-                                    .collect(Collectors.toSet())
-                    );
-                })
-                .toList();
+
+        idQuery.where(criteriaBuilder.and(idPredicates.toArray(new Predicate[0])));
+
+        List<Integer> contentIds = entityManager.createQuery(idQuery)
+                .setFirstResult((int) pageable.getOffset())
+                .setMaxResults(pageable.getPageSize())
+                .getResultList();
+
+        if (contentIds.isEmpty()) {
+            return new PageImpl<>(Collections.emptyList(), pageable, 0);
+        }
+
+        CriteriaQuery<Content> contentQuery = criteriaBuilder.createQuery(Content.class);
+        Root<? extends Content> contentRoot = contentQuery.from(entityClass);
+        contentRoot.fetch("genres", JoinType.LEFT).fetch("genre", JoinType.LEFT);
+        contentQuery.select((Selection<? extends Content>) contentRoot);
+        contentQuery.distinct(true);
+        contentQuery.where(contentRoot.get("id").in(contentIds));
+        List<? extends Content> contentList = entityManager.createQuery(contentQuery).getResultList();
+
+        CriteriaQuery<Long> countQuery = criteriaBuilder.createQuery(Long.class);
+        Root<? extends Content> countRoot = countQuery.from(entityClass);
+        countQuery.select(criteriaBuilder.countDistinct(countRoot.get("id")));
+        List<Predicate> countPredicates = buildPredicates(criteriaBuilder, countRoot, countQuery, genres, year, rate,
+                contentType, language);
+        countQuery.where(criteriaBuilder.and(countPredicates.toArray(new Predicate[0])));
+        long total = entityManager.createQuery(countQuery).getSingleResult();
+
+        return new PageImpl<>(new ArrayList<>(contentList), pageable, total);
     }
 
     @Override
-    public List<ContentMetaDataDto> searchContent(String keyword) {
-        List<ContentMetaDataDto> movies = queryContentMetaData(Movie.class, keyword);
-        List<ContentMetaDataDto> series = queryContentMetaData(Series.class, keyword);
-        List<ContentMetaDataDto> combined = new ArrayList<>();
+    public Page<Content> searchContent(String keyword, Pageable pageable) {
+        int pageSize = pageable.getPageSize();
+
+        List<Movie> movies = queryContent(Movie.class, keyword, pageSize);
+        List<Series> series = queryContent(Series.class, keyword, pageSize);
+
+        List<Content> combined = new ArrayList<>();
         combined.addAll(movies);
         combined.addAll(series);
-        return combined.stream().sorted(Comparator.comparing(ContentMetaDataDto::getRate).reversed())
-                .toList();
+
+        List<Content> sortedContent = combined.stream()
+                .sorted(Comparator.comparing(Content::getImdbRate).reversed())
+                .collect(Collectors.toList());
+
+        int start = (int) pageable.getOffset();
+        int end = Math.min(start + pageable.getPageSize(), combined.size());
+        List<Content> pageContent = sortedContent.subList(start, end);
+
+        long totalMovies = countContent(Movie.class, keyword);
+        long totalSeries = countContent(Series.class, keyword);
+        long total = totalMovies + totalSeries;
+
+        return new PageImpl<>(pageContent, pageable, total);
     }
 
-    private <T extends Content> List<ContentMetaDataDto> queryContentMetaData(Class<T> entityClass, String keyword) {
+    private <T extends Content> List<T> queryContent(Class<T> entityClass, String keyword, int limit) {
         CriteriaBuilder cb = entityManager.getCriteriaBuilder();
-        CriteriaQuery<Content> query = cb.createQuery(Content.class);
-        Root<T> root = query.from(entityClass);
-        root.fetch("genres", JoinType.LEFT).fetch("genre", JoinType.LEFT);
+        CriteriaQuery<Integer> idQuery = cb.createQuery(Integer.class);
+        Root<T> idRoot = idQuery.from(entityClass);
+        idQuery.select(idRoot.get("id")).distinct(true);
+
+        List<Predicate> predicates = new ArrayList<>();
+        if (keyword != null && !keyword.isBlank()) {
+            predicates.add(cb.like(cb.lower(idRoot.get("title")), "%" + keyword.toLowerCase() + "%"));
+        }
+        idQuery.where(cb.and(predicates.toArray(new Predicate[0])));
+
+        List<Integer> ids = entityManager.createQuery(idQuery)
+                .setMaxResults(limit)
+                .getResultList();
+
+        if (ids.isEmpty()) return Collections.emptyList();
+        CriteriaQuery<T> contentQuery = cb.createQuery(entityClass);
+        Root<T> contentRoot = contentQuery.from(entityClass);
+        contentRoot.fetch("genres", JoinType.LEFT).fetch("genre", JoinType.LEFT);
+        contentQuery.select(contentRoot).distinct(true);
+        contentQuery.where(contentRoot.get("id").in(ids));
+
+        return entityManager.createQuery(contentQuery).getResultList();
+    }
+
+    private <T extends Content> long countContent(Class<T> entityClass, String keyword) {
+        CriteriaBuilder cb = entityManager.getCriteriaBuilder();
+        CriteriaQuery<Long> countQuery = cb.createQuery(Long.class);
+        Root<T> root = countQuery.from(entityClass);
+        countQuery.select(cb.countDistinct(root));
 
         List<Predicate> predicates = new ArrayList<>();
         if (keyword != null && !keyword.isBlank()) {
             predicates.add(cb.like(cb.lower(root.get("title")), "%" + keyword.toLowerCase() + "%"));
         }
-        query.where(cb.and(predicates.toArray(new Predicate[0])));
-        query.distinct(true);
-        List<Content> results = entityManager.createQuery(query).getResultList();
-        return results.stream()
-                .map(content -> {
-                    String slug = null;
-                    if (content instanceof Movie movie) {
-                        slug = movie.getSlug();
-                    } else if (content instanceof Series series) {
-                        slug = series.getSlug();
-                    }
-                    return new ContentMetaDataDto(
-                            content.getId(),
-                            content.getTitle(),
-                            slug,
-                            tmdbApiConfiguration.getBaseImageUrl() + content.getPosterPath(),
-                            content.getReleaseDate(),
-                            content.getImdbRate(),
-                            content.getOverview(),
-                            content.getGenres().stream()
-                                    .map(g -> g.getGenre().getName())
-                                    .collect(Collectors.toSet())
-                    );
-                })
-                .toList();
+        countQuery.where(cb.and(predicates.toArray(new Predicate[0])));
+
+        return entityManager.createQuery(countQuery).getSingleResult();
     }
+
+
+    private List<Predicate> buildPredicates(CriteriaBuilder criteriaBuilder, Root<? extends Content> root,
+                                            CriteriaQuery<?> query, List<String> genres, Integer year,
+                                            Integer rate, ContentType contentType, String language) {
+        List<Predicate> predicates = new ArrayList<>();
+
+        if (contentType != null) {
+            predicates.add(root.get("contentType").in(contentType));
+        } else {
+            predicates.add(root.get("contentType").in(ContentType.MOVIE, ContentType.SERIES));
+        }
+
+        if (genres != null && !genres.isEmpty()) {
+            Subquery<Integer> subquery = query.subquery(Integer.class);
+            Root<ContentGenre> subRoot = subquery.from(ContentGenre.class);
+            Join<ContentGenre, Genre> subGenreJoin = subRoot.join("genre");
+
+            subquery.select(subRoot.get("content").get("id"))
+                    .where(subGenreJoin.get("name").in(genres))
+                    .groupBy(subRoot.get("content").get("id"))
+                    .having(criteriaBuilder.equal(criteriaBuilder.countDistinct(subGenreJoin.get("name")),
+                            genres.size()));
+
+            predicates.add(root.get("id").in(subquery));
+        }
+
+        if (language != null && !language.isBlank()) {
+            predicates.add(criteriaBuilder.like(criteriaBuilder.lower(root.get("language")),
+                    "%" + language.toLowerCase() + "%"));
+        }
+
+        if (rate != null && rate > 0) {
+            predicates.add(criteriaBuilder.greaterThanOrEqualTo(root.get("imdbRate"), rate));
+        }
+
+        if (year != null) {
+            Expression<String> yearStr = criteriaBuilder.function("to_char", String.class, root.get("releaseDate"),
+                    criteriaBuilder.literal("YYYY"));
+            predicates.add(criteriaBuilder.greaterThanOrEqualTo(yearStr, year.toString()));
+        }
+
+        return predicates;
+    }
+
+
 }
